# data_science_projects

./: .gitignore  README.md  pyproject.toml
projects/: GARCH_torch.ipynb  Implied_volatility_surface.ipynb  Portfolio_weight_prediction.ipynb  Vol_spillover.ipynb  Volatility_XGBoost.ipynb
projects/corporate_finance/: IRR.ipynb  YMF.ipynb  bid.ipynb  bond_analysis.ipynb  fund_overview.ipynb
projects/portfolio_optimization/: MVF.ipynb  optimizer.py  p_config.yaml  portfolio_finder.ipynb  portfolio_optim.ipynb  stock_analysis.ipynb  utils.py
projects/salmon_export/: export_chart.ipynb
projects/salmon_price_prediction/: README.md  advanced_cgb.ipynb  data_loading.ipynb  pred_RNN.ipynb  pred_prophet.ipynb  pred_xgb.ipynb  salmon_data_analysis.ipynb  salmon_prices.csv  supply_demand_salmon.ipynb  utils.py
projects/salmon_price_prediction/price_prediction/: advanced_cgb.ipynb  pred_RNN.ipynb  pred_prophet.ipynb  pred_xgb.ipynb  pred_xgb_noc.ipynb
projects/salmon_price_prediction/supply_demand/: STL.ipynb  VAR_shocks.ipynb  elasticity_estimation.ipynb  fish_feed_correlation.ipynb  regression.R  salmon_data_analysis.ipynb  supply_demand_salmon.ipynb
projects/salmon_price_prediction/volatility_modelling/: ARIMA_GARCH.ipynb  model.py
